--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,6 @@ body{
     padding: 10px;
     display: flex;
     width: 70%;
-    border: 1px solid #99CEA8;
     border-radius: 5px;
     display: flex;
     justify-content: center;
